--- a/shopping.ipynb
+++ b/shopping.ipynb
@@ -1,34 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Создайте модуль \"shopping_list.py\", который будет реализовывать функционал списка покупок. Внутри должны быть функции add_item (для добавления в список, например «Хлеб, 2», где «Хлеб» - ключ, «2» - значение, которой по умолчанию в функции равно 0), remove_item для удаления покупки из списка, edit_quantity для редактирования количества (то есть значения), view_list для отображения всего списка (то есть словаря). Создайте новый файл, куда вы импортируете созданный модуль и отобразите работу каждый из этих функций. Например, пользователь сначала добавил в список три покупки: Хлеб – 2, Молоко, Яйца – 10, далее посмотрел этот список; потом он понял, что не хочет молоко, удалил его, посмотрел измененный список; потом решил, что 10 яиц – это много, и поменял их количество на 7 и в конце решил посмотреть на итоговый список.\n",
+    "\n",
+    "Дополнительно: улучшите функционал, если вы, конечно, изначально так не сделали, следующим образом. Если добавляемый объект уже содержится в списке (например, «Хлеб» уже есть, но мы хотим добавить его еще раз), то он не добавляет в словарь новую строку, а прибавляет количество (значение) к этому же наименованию. Заодно повторите работу со словарями 😊"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n",
-      "['Купить хлеб']\n"
+      "список после добавления продуктов: \n",
+      "{'Хлеб': 4, 'Яйца': 7, 'хлеб': 12, 'яйца': 17, 'молоко': 1}\n",
+      "-----------\n",
+      "список после удаления молока: \n",
+      "{'Хлеб': 4, 'Яйца': 7, 'хлеб': 12, 'яйца': 17}\n",
+      "-----------\n",
+      "*изменяем кол-во яиц* \n",
+      "-----------\n",
+      "итоговый список покупок:\n",
+      "{'Хлеб': 4, 'Яйца': 7, 'хлеб': 12, 'яйца': 7}\n"
      ]
     }
    ],
    "source": [
-    "import shopping_list\n",
+    "from shopping_list import add_item, remove_item, edit_quantity, view_list\n",
     "\n",
-    "print(shopping_list.items)\n",
-    "shopping_list.add_item('Купить хлеб')\n",
+    "add_item(\"хлеб\", 2)\n",
+    "add_item(\"молоко\", 1)\n",
+    "add_item(\"яйца\", 10)\n",
     "\n",
-    "print(shopping_list.items)\n"
+    "print(\"список после добавления продуктов: \")\n",
+    "print(view_list())\n",
+    "\n",
+    "print(\"-----------\")\n",
+    "\n",
+    "remove_item(\"молоко\")\n",
+    "print(\"список после удаления молока: \")\n",
+    "print(view_list())\n",
+    "\n",
+    "print(\"-----------\")\n",
+    "\n",
+    "print(\"*изменяем кол-во яиц* \")\n",
+    "edit_quantity(\"яйца\", 7)\n",
+    "\n",
+    "print(\"-----------\")\n",
+    "\n",
+    "print(\"итоговый список покупок:\")\n",
+    "print(view_list())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -47,7 +75,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
